--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,9 @@ console = "0.15.11"
 dialoguer = "0.11.0"
 fatfs = "0.3.6"
 hex = "0.4.3"
-sha2 = "0.10.9"
 sysinfo = "0.35.1"
 unicode-segmentation = "1.12.0"
+
+[dependencies.windows-sys]
+version = "0.59.0"
+features = ["Win32_Security"]
