--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,3 +17,23 @@ jobs:
       with:
         name: mset9-rs-win-64
         path: target/x86_64-pc-windows-msvc/release/mset9-rs.exe
+  build-macos:
+    runs-on: macos-latest
+    steps:
+    - uses: actions/checkout@v4
+    - uses: actions-rust-lang/setup-rust-toolchain@v1
+      with:
+        toolchain: nightly
+        target: x86_64-apple-darwin,aarch64-apple-darwin
+    - run: cargo build --release --target x86_64-apple-darwin
+    - run: cargo build --release --target aarch64-apple-darwin
+    - run: |
+        mkdir -p universal-bin
+        lipo -create \
+          target/x86_64-apple-darwin/release/mset9-rs \
+          target/aarch64-apple-darwin/release/mset9-rs \
+          -output universal-bin/mset9-rs
+    - uses: actions/upload-artifact@v4
+      with:
+        name: mset9-rs-macos-universal
+        path: universal-bin/mset9-rs
